@@ -50,7 +50,7 @@ profile:
       - auth_ssh_password_authentication_disable
   - section: "icloud"
     rules:
-      - icloud_appleid_syssetting_disable
+      - icloud_appleid_system_settings_disable
       - icloud_addressbook_disable
       - icloud_appleid_prefpane_disable
       - icloud_bookmarks_disable
